<resources>
    <string name="app_name">CarPool</string>
    <string name="login_text">Login</string>
    <string name="to_text">to</string>
    <string name="car_pool_text">CarPool</string>
    <string name="login_button_text">LOGIN</string>
    <string name="registration_link_text">Register new account</string>
    <string name="register_title">Register Your Account</string>
    <string name="password_again_text">Password again:</string>
    <string name="user_name_text">User Name:</string>
    <string name="password_text">Password:</string>
    <string name="register_your_account_text">Register your account</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="actualities_page_title">Actualities</string>
    <string name="profile_page_title">Profile</string>
    <string name="group_page_title">My group</string>
    <string name="time_of_departure_label_text">Time of departure:</string>
    <string name="taken_seats_available_seats">Taken seats/available seats:</string>
    <string name="carpool_application_text">CarPool Application</string>
    <string name="edit_button_text">Edit</string>
    <string name="save_button_text">Save</string>
    <string name="profile_picture_content_description">Profile picture</string>
    <string name="add_group_member_button_text">Add group member</string>
    <string name="email_address_label_text">Email address:</string>
    <string name="add_new_announcement">Add new announcement</string>
    <string name="name_label_text">Name:</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="add_user_button_text">add user</string>
    <string name="add_user_name_label_text">Add User Name</string>
    <string name="add_user_to_group_title_text">Add User to Group</string>
    <string name="user_added_success">User added successfully to your group</string>
    <string name="add_new_user_to_your_group_decription_text">add new user to your group</string>
    <string name="trash_bin_delete_button_description_text">trash bin delete button</string>
    <string name="owner_label_text">Owner:</string>
    <string name="register_to_the_announcement_button_text">Register</string>
    <string name="taken_seats_label_taken">Taken seats:</string>
    <string name="unregister_button_text">Unregister</string>
    <string name="announcement_label_text">Announcement:</string>
</resources>