<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/actualitiesFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="hu.bme.aut.android.carpool.ui.appcontent.profile.ProfileFragment"
        android:label="@string/profile_page_title"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/actualitiesFragment"
        android:name="hu.bme.aut.android.carpool.ui.appcontent.actualities.ActualitiesFragment"
        android:label="@string/actualities_page_title"
        tools:layout="@layout/fragment_actualities" />
    <fragment
        android:id="@+id/groupFragment"
        android:name="hu.bme.aut.android.carpool.ui.appcontent.group.GroupFragment"
        android:label="@string/group_page_title"
        tools:layout="@layout/fragment_group" />
</navigation>