<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:text="@string/add_user_to_group_title_text"
        android:textAlignment="center"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:text="@string/add_user_name_label_text"
        android:textSize="22sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUserName"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/dialog_background"
        android:textSize="24sp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background_no_border"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="@string/cancel_button_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:text="@string/add_user_button_text"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>